fix: Allow Breadcrumb items to wrap.

--- a/app/components/primer/beta/breadcrumbs.pcss
+++ b/app/components/primer/beta/breadcrumbs.pcss
@@ -1,7 +1,6 @@
 .breadcrumb-item {
   display: inline-block;
   margin-left: -0.35em;
-  white-space: nowrap;
   list-style: none;
 
   &::after {
